// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MarkdownsPeek Snapshots Custom configuration HTML structure snapshot 1`] = `
{
  "containerId": "test-container",
  "customConfig": true,
  "prefix": "custom-prefix",
  "texts": {
    "author": "AUTHOR",
    "error": "Custom Error: ",
    "files": "FILES",
    "loading": "Custom Loading...",
    "menu": "MENU",
    "minRead": "MIN READ",
    "noFiles": "Custom No Files",
    "notFound": "ARTICLE NOT FOUND",
    "selectFile": "SELECT FILE TO VIEW",
  },
}
`;

exports[`MarkdownsPeek Snapshots Default HTML structure snapshot 1`] = `
{
  "containerId": "test-container",
  "prefix": "default-prefix",
  "styles": undefined,
  "texts": {
    "author": "AUTHOR",
    "error": "ERROR: ",
    "files": "FILES",
    "loading": "LOADING...",
    "menu": "MENU",
    "minRead": "MIN READ",
    "noFiles": "NO FILES FOUND",
    "notFound": "ARTICLE NOT FOUND",
    "selectFile": "SELECT FILE TO VIEW",
  },
}
`;

exports[`MarkdownsPeek Snapshots Mobile menu HTML structure snapshot 1`] = `
{
  "hasMobileMenu": true,
  "mobileClasses": [
    "test-prefixmobile-menu",
    "test-prefixmobile-toggle",
  ],
  "prefix": "test-prefix",
}
`;
